<resources>
    <string name="app_name">Angkas</string>


    <!--User Option strings -->
    <string name="Welcome">Welcome to Hitch</string>
    <string name="SigninFb">SIGN IN WITH FACEBOOK</string>
    <string name="SigninGoogle">SIGN IN WITH GOOGLE</string>
    <string name="Signin">SIGN IN</string>
    <string name="Register">REGISTER</string>
    <string name="Agree">By creating an account I acknowledge and agree to the</string>
    <string name="Agree2">Terms of Use and Privacy Policy</string>

    <!--Login strings -->
    <string name="ForgotPass">Forgot password?</string>

    <!--Forgot Password strings -->
    <string name="Reset">RESET PASSWORD</string>
    <string name="ResetPass">Reset your password</string>
    <string name="ResetPass2">Enter your email below to receive your</string>
    <string name="ResetPass3">password reset instruction</string>

    <!-- Register strings -->
    <string name="FName">First Name</string>
    <string name="LName">Last Name</string>
    <string name="EAdd">Email Address</string>
    <string name="Password">Password</string>
    <string name="PhoneNum">Phone Number</string>
    <string name="Next">NEXT</string>

    <!-- Login strings -->
    <string name="angkas">ngkas</string>
    <string name="email_label">Email Address</string>
    <string name="pass_label">Password</string>
    <string name="loginbtn_label">LOGIN</string>
    <string name="login_using">Sign-in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_email">Log in with your email address</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="or">OR</string>

    <!-- Registration option strings -->
    <string name="option_drvr">DRIVER</string>
    <string name="option_psngr">PASSENGER</string>

    <!-- Signup strings -->
    <string name="user_reg">USER REGISTRATION</string>
    <string name="reg_psngr">SIGN UP</string>
    <string name="email_add">Email Address</string>
    <string name="confirm_pass">Confirm Password</string>

    <!-- Forgot Password strings -->


    <!-- Passenger Profile strings -->
    <string name="page_title">PASSENGER PROFILE</string>
    <string name="pssngr_name">NAME: </string>
    <string name="pssngr_email">EMAIL ADDRESS: </string>

    <!-- Driver Profile strings -->
    <string name="page_title2">DRIVER PROFILE</string>
    <string name="drvr_id">DRIVER ID: </string>
    <string name="drvr_license">DRIVERS LICENSE: </string>
    <string name="expiry_date">EXPIRY DATE: </string>
    <string name="drvr_name">NAME: </string>
    <string name="gender">GENDER: </string>
    <string name="dob">BIRTHDATE: </string>
    <string name="phone_num">PHONE NUMBER: </string>
    <string name="alternate_num">ALTERNATE #: </string>
    <string name="drvr_email">EMAIL ADDRESS: </string>
    <string name="drvr_maritalstat">MARITAL STATUS: </string>

    <!-- Driver Schedule strings -->
    <string name="list_label">LIST OF SCHEDULES</string>
    <string name="add_sched">ADD SCHEDULE</string>
    <string name="save">SAVE</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="maritalstat">
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Divorced</item>
        <item>Separated</item>
        <item>In a Relationship</item>
        <item>Its Complicated</item>
        <item>Mutual Understanding</item>
        <item>Friendzoned</item>
    </string-array>

    <string-array name="passengertype">

        <item>Regular</item>
        <item>Student</item>
        <item>Senior</item>
        <item>PWD</item>
        <item>Infant</item>
        <item>Child</item>

    </string-array>

    <string name="payment_prompt">Passenger Preference</string>
    <string-array name="Payment_Type">
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
    </string-array>

    <string-array name="Passenger_Preference">
        <item>Mixed</item>
        <item>All Male</item>
        <item>All Female</item>
    </string-array>

    <string name="passengerseat_prompt">Passenger Seats</string>
    <string-array name="Passenger_Seats">
        <item>Front-Center</item>
        <item>Front-Right</item>
        <item>Middle-Left</item>
        <item>Middle-Center</item>
        <item>Middle-Right</item>
        <item>Back-Left</item>
        <item>Back-Center</item>
        <item>Back-Right</item>
    </string-array>

    <string name="Tracking_prompt">Tracking</string>
    <string-array name="Passenger_Track">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string name="body_type_header">--Body Type--</string>
    <string-array name="body_type">
        <item>--Body Type--</item>
        <item>Sedan</item>
        <item>Hatchback</item>
        <item>Crossover</item>
        <item>Coupe</item>
        <item>Hatchback</item>
        <item>SUV</item>
        <item>Hatchback</item>
        <item>MPV</item>
        <item>Station Wagon</item>
        <item>Hatchback</item>
    </string-array>

    <string name="make_header">--Make--</string>
    <string-array name="make">
        <item>--Brand--</item>
        <item>Honda</item>
        <item>Volkswagen</item>
        <item>Subaru</item>
        <item>Isuzu</item>
        <item>Mazda</item>
        <item>BMW</item>
        <item>Suzuki</item>
        <item>Volvo</item>
        <item>Hatchback</item>
        <item>Toyota</item>
        <item>Mitsubishi</item>
        <item>Chevrolet</item>
        <item>Peugeot</item>
        <item>Nissan</item>
        <item>Mercedez-Benz</item>
        <item>Audi</item>
    </string-array>

    <string name="model_header">--Model--</string>
    <string-array name="model">
        <item>--Model--</item>
        <item>Accord</item>
        <item>City</item>
        <item>Civic</item>
        <item>CR-V</item>
        <item>CR-Z</item>
        <item>Jazz</item>
    </string-array>

    <string name="year_header">--Year--</string>
    <string-array name="year">
        <item>--Year--</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
    </string-array>

    <string-array name="fuel_type">
        <item>--Fuel Type--</item>
        <item>Gas</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="passenger_preference">
        <item>Mixed</item>
        <item>All Male</item>
        <item>All Female</item>
    </string-array>

    <string-array name="number_of_luggages">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="dialect">
        <item>Tagalog</item>
        <item>English</item>
        <item>Others</item>
    </string-array>

    <string-array name="tracking">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string name="title_activity_data_list">DataListActivity</string>
    <string name="title_activity_driver__navigation__menu">Driver_Navigation_Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_navigation_menu">DriverNavigationMenu</string>
    <string name="title_activity_passenger_navigation_menu">PassengerNavigationMenu</string>


    <!-- Forgot Password strings -->
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="enter_emailaddress">Enter your Email to send your request.</string>
    <string name="enter_code">Enter your Security Code to proceed.</string>
    <string name="submit">SUBMIT</string>
    <!-- Home Screen strings -->
    <string name="driver">DRIVER</string>
    <string name="passenger">PASSENGER</string>
    <!--Security Code page strings -->
    <string name="security">Security Code</string>
    <string name="action_home">Home</string>

    <string name="new_pass">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_btn">CONFIRM</string>
    <string name="time_label">REMAINING TIME: </string>

    <string name="fb_login_protocol_scheme">fb503203266554684</string>
    <string name="facebook_app_id">1359802360713452</string>
</resources>
