<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    tools:context=".Login.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp">
            <ImageView
                android:id="@+id/Logo"
                android:src="@drawable/angkaslogopic"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="170dp"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:singleLine="true"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/emaillogo"
                android:drawablePadding="10dp"
                android:hint="@string/email_label"
                android:paddingLeft="10dp"
                android:background="@color/white"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/Username"
                android:inputType="textPassword"
                android:singleLine="true"
                android:drawableLeft="@drawable/passwordlogo"
                android:drawablePadding="10dp"
                android:hint="@string/pass_label"
                android:paddingLeft="10dp"
                android:background="@color/white"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:onClick="signin"
            android:text="@string/loginbtn_label"
            android:background="@drawable/loginbtn" />
        <TextView
            android:id="@+id/ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12dp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_pass"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/noacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14dp"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:text="Don't have an account yet?"/>
            <TextView
                android:id="@+id/Signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="14dp"
                android:onClick="signup"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/noacc"
                android:text="@string/sign_up"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/Fb"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/fbbtn"
                android:text="@string/SigninFb"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/fbicon2"
                android:paddingLeft="50dip"
                android:drawablePadding="-50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>
            <Button
                android:id="@+id/Google"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="@drawable/googlebtn"
                android:text="@string/SigninGoogle"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/googleicon"
                android:paddingLeft="50dip"
                android:drawablePadding="-55dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
