<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login.forgot_password">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/Logo"
            android:src="@drawable/angkaslogopic"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="190dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/ForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:text="@string/forgot_pass"/>
        <TextView
            android:id="@+id/EmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textColor="@color/gray"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_emailaddress"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:singleLine="true"
                android:drawableLeft="@drawable/emaillogo"
                android:drawablePadding="10dp"
                android:hint="@string/email_label"
                android:paddingLeft="5dp"
                android:background="@color/white"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/login_color"
            android:text="@string/submit"
            android:textSize="20dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/LoginID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible"/>
    </LinearLayout>

</ScrollView>
